# operation-hq-desktop

src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/src/: lib.rs
